--- a/notebooks/house_price.ipynb
+++ b/notebooks/house_price.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 55,
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 56,
    "source": [
     "# import data\n",
     "df = pd.read_csv('../inputs/train.csv')\n",
@@ -248,7 +248,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 2
+     "execution_count": 56
     }
    ],
    "metadata": {}
@@ -1830,7 +1830,7 @@
    "cell_type": "code",
    "execution_count": 48,
    "source": [
-    "df.to_csv('../inputs/house_price_clean_no_scale.csv', index=False)"
+    "df.to_csv('../inputs/train_no_scale.csv', index=False)"
    ],
    "outputs": [],
    "metadata": {}
@@ -1864,7 +1864,7 @@
    "cell_type": "code",
    "execution_count": 50,
    "source": [
-    "df.to_csv('../inputs/house_price_clean_scale.csv', index=False)"
+    "df.to_csv('../inputs/train_scale.csv', index=False)"
    ],
    "outputs": [],
    "metadata": {}
